fix z-index

--- a/Client/src/components/CardSquare/CardSquare.module.css
+++ b/Client/src/components/CardSquare/CardSquare.module.css
@@ -11,7 +11,7 @@
   position: absolute;
   right: 10px;
   top: 10px;
-  z-index: 9;
+  z-index: 1;
 }
 
 .cardSquare .fav {
